# lab2-matrix

./: CMakeLists.txt
include/: tmatrix.h
test/: test_tmatrix.cpp  test_tvector.cpp
